<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.apps.sayantan.grandmintlogin.signUp">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/colorPrimary"
        android:elevation="100dp"
        android:foregroundGravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:max="100"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/text_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/mail_inp_text"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_mail"
        android:layout_marginTop="50dp"
        android:hint="@string/name_hint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name"
        android:layout_marginTop="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/pass"
        android:onClick="mailCheck"
        android:text="@string/sign_up_btn"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/signup"
        android:text="@string/already_signed_up_log_in_btn"
        android:onClick="logInPage"/>


</RelativeLayout>
