<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context="com.apps.sayantan.grandmintlogin.logIn">

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Material.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:backgroundTint="@color/colorPrimary"
        android:foregroundGravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:max="100"
        android:visibility="invisible"
        android:elevation="100dp"/>

    <TextView
        android:id="@+id/text_mail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/mail_inp_text"
        android:textAlignment="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_mail"
        android:text="@string/verification_desc"
        android:textAlignment="center"
        android:layout_marginTop="5dp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/desc"
        android:layout_marginTop="20dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/email"
        android:layout_marginTop="20dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/pass"
        android:layout_centerVertical="true"
        android:layout_marginTop="10dp"
        android:onClick="userLogIn"
        android:text="@string/log_in_btn" />

</RelativeLayout>
